encryption_key_update

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,10 @@ x-airflow-common:
   environment:
     &airflow-env
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
-    AIRFLOW__CORE__FERNET_KEY: ''
+    AIRFLOW__CORE__FERNET_KEY: 'm7MPbIxu4ad1FT20gz8jDpxN84JxnZuIi4hkw6RdVEI'
     AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'false'
     AIRFLOW__CORE__LOAD_EXAMPLES: 'true'
+    AIRFLOW__WEBSERVER__SECRET_KEY: 'm7MPbIxu4ad1FT20gz8jDpxN84JxnZuIi4hkw6RdVEI'
     AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
     AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://airflow:airflow@postgres/airflow
     AIRFLOW__CELERY__BROKER_URL: redis://redis:6379/0
